# meshmonitor

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  .npmrc  .prettierrc  API.md  ARCHITECTURE.md  BACKEND_SECURITY_REVIEW.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.armv7  Dockerfile.proxy  FRONTEND_SECURITY_REVIEW.md  LICENSE  LOW_ENTROPY_KEY_IMPLEMENTATION.md  MESHMANAGER_INTEGRATION.md  Makefile  PLAN_3770.md  PMTILES.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  README-pi.md  README.md  REFACTORING_PLAN.md  RELEASE_NOTES.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES_PHASE1.md  TEST_COVERAGE_SUMMARY.md  TEST_SUITE.md  TODOS.md  auth_test_report.txt  check-admin.mjs  copy-telemetry.mjs  docker-compose.api-test.yml  docker-compose.ble.yml  docker-compose.dev.local.yml  (+42 more)
.claude/: README.md  ai-development.md  architecture-notes.md  development.md  git-workflow.md  instructions.md  settings.json  worktree-guide.md
.devcontainer/: .dockerignore  Dockerfile  README.md  devcontainer.json  docker-compose.yml  post-create.sh  welcome.sh
.github/: dependabot.yml
data/: meshmonitor.db-shm  meshmonitor.db-wal
deliverables/: auth_analysis_deliverable.md  auth_exploitation_evidence.md  auth_exploitation_queue.json  authz_analysis_deliverable.md  authz_exploitation_evidence.md  (+12 more)
desktop/src-tauri/: Cargo.toml  Info.plist  apprise.entitlements  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: config.rs  lib.rs  main.rs  tray.rs
(+2133 files in other folders)
